bug: disable background color fade on firefox because of weird flash effect

--- a/sass/css/syntax-theme.css
+++ b/sass/css/syntax-theme.css
@@ -2,8 +2,10 @@
  * theme "Catppuccin" generated by syntect
  */
 
-.z-code {
-  transition: background-color 0.3s ease;
+@supports not (-moz-appearance: none) {
+  .z-code {
+    transition: background-color 0.3s ease;
+  }
 }
 
 html[data-theme="light"] .z-code {
